<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp">


    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/question"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/title_question"
        android:textSize="20sp"
        android:layout_below="@+id/question"
        android:text="@string/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/questionInsert"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/title_question"
        android:background="@drawable/edit_text_background"
        android:gravity="start"
        android:maxLines="1"
        android:padding="5dp"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/question_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionInsert"
        android:text="@string/send_anonymous" />

    <Button
        android:id="@+id/question_send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_check_box"
        android:layout_marginTop="10dp"
        android:background="@color/submitColor"
        android:text="@string/send"
        android:textColor="@color/white" />


</RelativeLayout>