<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/meeting"
        android:layout_marginBottom="10dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/meeting_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meeting"
        android:text="Категория проблемы:"
        android:textSize="20sp" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/category_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/meeting_category"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:padding="0dp" />

    <LinearLayout
        android:id="@+id/day_time_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/category_select"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dayInsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/timeInsert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" />


        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/meeting_send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/day_time_layout"
        android:layout_marginTop="10dp"
        android:background="@color/submitColor"
        android:text="@string/enroll"
        android:textColor="@color/white" />

</RelativeLayout>