<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp">

    <TextView
        android:id="@+id/trouble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/trouble"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trouble"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/titleInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:background="@drawable/edit_text_background"
        android:maxLines="1"
        android:padding="5dp"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleInsert"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/descriptionInsert"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/description"
        android:background="@drawable/edit_text_background"
        android:gravity="start"
        android:padding="5dp"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/media_content"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@id/descriptionInsert"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/first_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/image_background"
                    android:padding="2dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_photo_camera" />

                <ImageView
                    android:id="@+id/second_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/image_background"
                    android:padding="2dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_photo_camera" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/third_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/image_background"
                    android:padding="2dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_photo_camera" />

                <ImageView
                    android:id="@+id/fourth_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/image_background"
                    android:padding="2dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_photo_camera" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/trouble_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/media_content"
        android:text="@string/send_anonymous"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/trouble_send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trouble_check_box"
        android:layout_marginTop="10dp"
        android:background="@color/submitColor"
        android:text="@string/send"
        android:textColor="@color/white" />

</RelativeLayout>